# ghibli-movies-api

./: Cargo.toml  README.md
src/: database.rs  main.rs  movie.rs
