[package]
name = "ghibli-movies-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
bson = "2.7"
serde = { version = "1.0.188", features = ["derive"] } 
serde_json = "1.0"
sha256 = "1.4.0"

[dependencies.mongodb]
version = "2.7.0"
default-features = false
features = ["async-std-runtime"]
